# rust-informix-big-updates

./: .gitignore  Cargo.toml  README.md  collect_files.sh  config example.toml  insert_500.sql  readme.txt  set_local.ps1
src/: config.rs  main.rs  zip_county_map.rs
src/db/: connection.rs  county_operations.rs  mod.rs  query.rs  query_execution.rs  query_generation.rs  query_testing.rs  query_types.rs  sql_helpers.rs
src/files/: file_manager.rs  json_handler.rs  mod.rs  processed.rs
src/ui/: progress.rs
src/utils/: mod.rs  test_data.rs
