[package]
name = "informix-batch-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
odbc-api = "0.40.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
clap = { version = "4.3", features = ["derive"] }
indicatif = "0.17"
crossterm = "0.26"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4.0"
rand = "0.8.5"